--- a/public/editor/css/app.css
+++ b/public/editor/css/app.css
@@ -146,6 +146,7 @@ div {
 
 .dg.ac{
   z-index: 888888 !important;
+  margin-top: 48px;
 }
 
 .content_muebles {
@@ -216,6 +217,22 @@ font-size-2{
   width: 0%;
   -webkit-transition: all .5s;
   transition: all .5s;
+}
+
+.presupuestos-muebles{
+  width: 13%;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  overflow-y: auto;
+  border-right: 1px #CCC solid;
+  height: calc(100vh - 40px)  ;
+
+  /* height: 100vh; */
+}
+
+.presupuestos-muebles .container{
+
 }
 
 .show{
