--- a/public/editor/css/app.css
+++ b/public/editor/css/app.css
@@ -210,7 +210,7 @@ font-size-2{
 .div-muebles{
   position: relative;
   float: left;
-  overflow: hidden;
+  /* overflow: hidden; */
   overflow-y: auto;
   background-color: #f5f5f5;
   height: 100vh;
@@ -223,18 +223,19 @@ font-size-2{
   width: 13%;
   position: absolute;
   float: left;
-  overflow: hidden;
+  /* overflow: hidden; */
   overflow-y: auto;
   border-right: 1px #CCC solid;
   height: calc(100vh - 40px)  ;
   z-index: 2147483610;
   background-color: #EEE;
+  text-overflow: ellipsis !important;
   
   /* height: 100vh; */
 }
 
 .presupuestos-muebles .container{
-
+  width: 100%
 }
 
 .show{
@@ -262,4 +263,8 @@ font-size-2{
 
 .d-none{
   display: none !important;
+}
+
+.media-body{
+  text-overflow: ellipsis !important;
 }
