--- a/public/editor/css/app.css
+++ b/public/editor/css/app.css
@@ -188,6 +188,10 @@ mt-5{
   margin-top: 5rem !important;
 }
 
+mb-3{
+  margin-bottom: 3rem !important;
+}
+
 font-weight-bold{
   font-weight: bold !important;
 }
